<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="horizontal">
        <!--游戏主区域-->
        <FrameLayout
            android:id="@+id/layoutGame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <!--游戏辅助信息区域-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_gravity="bottom"
            android:background="#10000000"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="#000000"
                    android:text="@string/_next"/>
                <!--游戏主区域-->
                <FrameLayout
                    android:id="@+id/layoutNext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="#000000"
                    android:text="@string/_max_score"/>
                <TextView
                    android:id="@+id/textMaxScore"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:textColor="#000000"
                    android:gravity="center" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="#000000"
                    android:text="@string/_now_score"/>
                <TextView
                    android:id="@+id/textNowScore"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:textColor="#000000"
                    android:gravity="center" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:orientation="vertical">
                <Button
                    android:id="@+id/btnStart"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/_start"/>
                <Button
                    android:id="@+id/btnPause"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/_pause"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <!--按钮区域-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btnLeft"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/_left"/>
        <Button
            android:id="@+id/btnRight"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/_right"/>
        <Button
            android:id="@+id/btnRotate"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/_rotate"/>
        <Button
            android:id="@+id/btnBottom"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/_down"/>
    </LinearLayout>
</LinearLayout>